[FIX] image not showing when sharing on facebook

--- a/src/components/BlogContent.scss
+++ b/src/components/BlogContent.scss
@@ -55,6 +55,10 @@
   }
 
   &-details {
+    @media (min-width: $md) {
+      max-width: 95%;
+    }
+
     img {
       max-width: 100%;
       width: 100% !important;
